# minkindr

minkindr/: CMakeLists.txt
minkindr/include/kindr/minimal/implementation/: rotation-quaternion-inl.h
